--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,18 @@ on:
   pull_request:
     branches: [master]
 
-jobs: 
-  build_and_export:
+jobs:
+  build_and_test:
+
     runs-on: ubuntu-latest
 
     steps:
-      uses: actions/checkout@v2
-    - name: Set up jdk 17
+    - uses: actions/checkout@v2
+    - name: Set up JDK 14
       uses: actions/setup-java@v1
       with:
         java-version: 17
 
-    - name: Build project with Maven
+    - name: Package the application with Maven
       run: mvn -B package --file pom.xml
     
