--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,9 @@ jobs:
         java-version: 21
 
     - name: Package the application with Maven
-      run: mvn -B package --file pom.xml
-    
+    - run: mvn -B package --file pom.xml
+    - run: mkdir export && cp target/*jar-with-dependencies.jar export
+    - uses: actions/upload-artifact@v1
+      with:
+        name: Export
+        path: export
