--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,8 @@ jobs:
 
     - name: Package the application with Maven
     - run: mvn -B package --file pom.xml
-    - run: mkdir export && cp target/*jar-with-dependencies.jar export
-    - name: Export the final build file.
-      uses: actions/upload-artifact@v1
-      with:
-        name: Export
-        path: export
+    - run: mkdir staging && cp target/*jar-with-dependencies.jar staging
+    - uses: actions/upload-artifact@v1
+        with:
+         name: Package
+         path: staging
