--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
 
     - name: Package the application with Maven
       run: mvn -B  package --file pom.xml
-    - run: mkdir export %% cp target/*.jar export
+    - run: mkdir Exports %% cp target/*.jar export
     - name: Upload the packaged jar
       uses: actions/upload-artifact@v4
       with:
         name: Package
-        path: export
+        path: Exports
 
