--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>fileshare</name>
-	<description>Demo project for Spring Boot</description>
+	<description>A Fileshare utility built using Spring boot</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -28,7 +28,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 
@@ -62,6 +62,7 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
+			<version>6.2.1</version>
 		</dependency>
 	</dependencies>
 
